k8s/app/ct-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ct-app-service
  namespace: ct-app-ns
spec:
  selector:
    app: ct-app
  type: NodePort
  ports:
  - protocol: TCP
    port: 18000
    targetPort: 18000
