k8s/app/ct-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ct-app-ingress
  namespace: ct-app-ns
spec:
  rules:
  - http:
      paths:
      - path: /ct
        pathType: Prefix
        backend:
          service:
            name: ct-app-service
            port:
              number: 18000
      - path: /ct-web
        pathType: Prefix
        backend:
          service:
            name: ct-web-service
            port:
              number: 18080
